feat(user profile update)

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -8,7 +8,7 @@
       <fieldset>
         <h3>name</h3>
         <input
-          name="name"
+          name="user"
           type="text"
           value="Chris Evans
             "
