--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,11 @@
     <title>index Page</title>
   </header>
   <body>
-    <h1>pass para to 3 layer of function 😭</h1>
+    <h1>List of all the messages</h1>
     <body>
       <ul>
         <% messages.forEach((message) => { %> <%-
-        include('user',{user:message.user,message:message.text,date:message.added});
+        include('user',{id:message.id,user:message.user,message:message.text,date:message.added});
         %> <% }); %>
       </ul>
       <a href="/new">Add message</a>
