--- a/views/user.ejs
+++ b/views/user.ejs
@@ -3,5 +3,6 @@
     <li><%= user %></li>
     <li><%= message %></li>
     <li><%= date %></li>
+    <a href="/<%= id%> ">to profile</a>
   </ul>
 </li>
